--- a/results.tex
+++ b/results.tex
@@ -8,8 +8,9 @@ Abschnitt \ref{goldpvd} zeigt anhand von Gold-PVD allgemeine Voruntersuchungen f
 Der darauf folgende Abschnitt \ref{copperpvd} stellt Voruntersuchungen unterschiedlicher Parametersätze, Unebenheiten an der Oberfläche und deren automatische Schließung anhand von Kupfer-PVD dar.
 Anschließend werden Kupfer-Nickel-Multilagensysteme in Abschnitt \ref{multilayer} zur Parsivald-Simulation vorbereitet und mit LAMMPS-simulierten Systemen verglichen.
 In Abschnitt \ref{siliconpvd} werden Silizium-PVD-Systeme mit dem Ziel der Abscheidung amorpher Schichten untersucht.
+Zusätzlich werden dort Voruntersuchungen für Siliziumoxid-CVD durchgeführt.
 Abschnitt \ref{aluminaald} kehrt kurz zum Thema der Bachelorarbeit zurück und untersucht TMA und Wasser als Precursoren der \ce{Al2O3}-ALD.
-Zuletzt werden in Abschnitt \ref{silicacvd} Precursor-Reaktionen und die darauf basierende Siliziumoxid-CVD behandelt.
+%% Zuletzt werden in Abschnitt \ref{silicacvd} Precursor-Reaktionen und die darauf basierende Siliziumoxid-CVD behandelt.
 
 \input{goldpvd}
 \clearpage
@@ -20,5 +21,3 @@ Zuletzt werden in Abschnitt \ref{silicacvd} Precursor-Reaktionen und die darauf 
 \input{siliconpvd}
 \clearpage
 \input{aluminaald}
-\clearpage
-\input{silicacvd}
