--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -40,7 +40,7 @@ Zur einfacheren Veranschaulichung wurde nur ein wenige Nanometer dünnes Profil 
   \end{subfigure}
 \end{figure}
 
-\section{Multilagen mit einer Dicke von \SI{5}{\nano\meter}}
+\section{Multilagen mit einer Dicke von 5 nm}
 
 Ergänzend wurden auch Untersuchungen an Schichten mit Lagendicken begonnen, die sich mehr an experimentellen Werten von mehreren Nanometern orientieren.
 Abbildung \ref{fig:multilayer_thickfail} stellt ein solches System dar, das aber aus Mangel an Rechenzeit für die notwendige Optimierung der Simulationsparameter nicht weiter untersucht wurde.
